--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "@vercel/analytics": "^1.6.1",
     "next": "14.2.3",
     "react": "^18",
