--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "@vercel/analytics": "^1.6.1",
+    "framer-motion": "^12.24.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
